--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,5 +1,5 @@
 ---
-title: Charting champions
+title: Editor Charting champions
 hero_image: images/banner.png
 description:
   Discover the power of lists in Python by creating an interactive chart
